--- a/_config.yml
+++ b/_config.yml
@@ -25,10 +25,10 @@ author:
   name             : "Jinhui Wei"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  location         : "Guangzhou, China"
+  employer         : "Sun Yat-sen University"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "weijh28@mail2.sysu.edu.cn" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
