--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Jinhui Wei"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "Knowledges obtained on the papers always feel shallow, must know this thing to practice."
   location         : "Guangzhou, China"
   employer         : "Sun Yat-sen University"
   uri              : # URL
